tests/org.eclipse.php.core.tests/workspace/errors/php7/duplicateFieldDeclaration1.pdtt
--TEST--
Test duplicated field
--FILE--
<?php
class Foo {
	public $bar;
	public $bar;
}
?>
--EXPECT--
[line=4, start=40, end=44] Cannot declare field $bar because the name is already in use